--- a/.env.example
+++ b/.env.example
@@ -53,7 +53,7 @@ KAFKA_BOOTSTRAP_SERVERS=localhost:29092
 # RAG
 OLLAMA_BASE_URL=http://localhost:11434
 OLLAMA_EMBEDDING_MODEL=nomic-embed-text
-OLLAMA_CHAT_MODEL=llama3.2
+OLLAMA_CHAT_MODEL=gemma2:2b
 RAG_SEARCH_TOP_K=3
 RAG_SIMILARITY_THRESHOLD=0.3
 
